# elastic-search-example

./: .gitignore  README.md  docker-compose.yml  main.py  pre-start.sh  pyproject.toml  wiki_loader.py
